# python-project-83

./: .gitignore  Makefile  README.md  database.sql  pyproject.toml
.github/workflows/: page_analyzer.yml
page_analyzer/: .env.sample  app.py  build.sh  database.py  utils.py  validator.py
page_analyzer/templates/: base.html  error.html  index.html  url.html  urls.html
page_analyzer/templates/error/: 404.html  500.html
